RESOLVED FIXED106555
Web Inspector [chromium]: Debugger.globalObjectCleared is not dispatched on reload after renderer swap
https://bugs.webkit.org/show_bug.cgi?id=106555
Summary Web Inspector [chromium]: Debugger.globalObjectCleared is not dispatched on r...
Pavel Feldman
Reported 2013-01-10 05:29:31 PST
Wrong enable() was made virtual.
Attachments
Patch (8.22 KB, patch)
2013-01-10 05:30 PST, Pavel Feldman
no flags
Patch (8.30 KB, patch)
2013-01-10 10:57 PST, Pavel Feldman
vsevik: review+
webkit.review.bot: commit-queue-
Pavel Feldman
Comment 1 2013-01-10 05:30:53 PST
Pavel Feldman
Comment 2 2013-01-10 05:35:08 PST
*** Bug 106543 has been marked as a duplicate of this bug. ***
Build Bot
Comment 3 2013-01-10 05:57:46 PST
Comment on attachment 182118 [details] Patch Attachment 182118 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15764911 New failing tests: inspector/debugger/debugger-scripts-reload.html
Pavel Feldman
Comment 4 2013-01-10 10:57:32 PST
WebKit Review Bot
Comment 5 2013-01-10 13:01:45 PST
Comment on attachment 182168 [details] Patch Attachment 182168 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15807078 New failing tests: inspector/debugger/debugger-scripts-reload.html
WebKit Review Bot
Comment 6 2013-01-10 13:59:31 PST
Comment on attachment 182168 [details] Patch Attachment 182168 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15774911 New failing tests: inspector/debugger/debugger-scripts-reload.html inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
Pavel Feldman
Comment 7 2013-01-11 01:46:29 PST
Note You need to log in before you can comment on or make changes to this bug.