Web Inspector [chromium]: Debugger.globalObjectCleared is not dispatched on reload after renderer swap https://bugs.webkit.org/show_bug.cgi?id=106555

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Wrong ::enable was made virtual in the InspectorDebuggerAgent.

Test: inspector/debugger/debugger-scripts-reload.html

* inspector/InspectorDebuggerAgent.h:
(InspectorDebuggerAgent):
* inspector/PageDebuggerAgent.cpp:
(WebCore::PageDebuggerAgent::enable):
(WebCore::PageDebuggerAgent::disable):
* inspector/PageDebuggerAgent.h:
(PageDebuggerAgent):

LayoutTests:

* http/tests/inspector/debugger-test.js:
(initialize_DebuggerTest):
* inspector/debugger/debugger-scripts-reload-expected.txt: Added.
* inspector/debugger/debugger-scripts-reload.html: Added.

Canonical link: https://commits.webkit.org/124840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139416 268f45cc-cd09-0410-ab3c-d52691b4dbfc