Source/WebCore/inspector/PageDebuggerAgent.h
@@ -49,10 +49,11 @@ public:
     static PassOwnPtr<PageDebuggerAgent> create(InstrumentingAgents*, InspectorCompositeState*, InspectorPageAgent*, InjectedScriptManager*, InspectorOverlay*);
     virtual ~PageDebuggerAgent();
 
-    virtual void enable(ErrorString*);
-    virtual void disable(ErrorString*);
-
     void didClearMainFrameWindowObject();
+
+protected:
+    virtual void enable();
+    virtual void disable();
 
 private:
     virtual void startListeningScriptDebugServer();
